# hwe

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  hwe.c
cmake/: cache.cmake  option.cmake  package.cmake
demo/: CMakeLists.txt  demo.cxx  demo2.c  wordnetlower.tree
doxygen/: CMakeLists.txt  Doxyfile.in
ext/: CMakeLists.txt
ext/word2vec/: word2vec.c
include/: hwe.hxx
include/hwe/: def.hxx  model.hxx  util.hxx
include/hwe/model/: hwe.hxx  model.hxx
include/hwe/util/: reader.hxx  util.hxx  vocab.hxx  word.hxx
src/: CMakeLists.txt  def.cxx  def.hxx  hwe.c  main.cxx  skipgram.cxx  util.hxx  vocab.cxx  vocab.hxx
src/hwe/model/: model.cxx
src/hwe/util/: reader.cxx  vocab.cxx
src/model/: model.cxx  model.hxx
src/util/: util.hxx  vocab.cxx  vocab.hxx
